fixing project page styles when on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -955,6 +955,12 @@ body::before {
         text-align: center;
     }
 
+    #projects-page-container{
+        margin: 0;
+        width: 100%;
+        padding: 1rem;
+    }
+
 
 
 
